...
                ),
              );
            },
            tooltip: 'Settings',
          ),
          SemanticIconButton(
            key: const Key('app_bar_account'),
            icon: Icons.account_circle,
            semanticLabel: 'Accounts',
            onPressed: () {
              Navigator.push(
                context,
                MaterialPageRoute(
...
